Fixed alternating row color in QTreeView (Sf2 patch selector)
With Qt 4.7 the alternating row color in the Sf2 patch selector dialog
somehow was messed up. Fixed this by explicitely setting the alternating
row color in the style's CSS files.
(cherry picked from commit fd407437723aed34e3d90f3d36817a4b84172a53)

--- a/data/themes/default/style.css
+++ b/data/themes/default/style.css
@@ -155,6 +155,10 @@ timeLine {
 	font-size: 8px;
 }
 
+QTreeView {
+	alternate-background-color: rgb(108,108,108);
+}
+
 /* Plugins */
 
 TripleOscillatorView knob {
